docs(rtm): record GIMLE-750..757 for the seam and the terminal view
All eight land Not Covered: a TUI has no headless Gherkin story, so Holmgang
cannot exercise it end to end. Rendered views regenerated from the two sources.